[package]
name = "viper"
version = "0.1.0"
edition = "2024"
description = "A TypeScript runtime powered by Boa JS engine and OXC"
license = "MIT"

[dependencies]
# Boa JS Engine - v0.21
boa_engine = "0.21"
boa_runtime = { version = "0.21", features = ["fetch", "reqwest-blocking"] }
boa_gc = "0.21"

# OXC - TypeScript parsing and transformation
oxc_allocator = "0.105"
oxc_parser = "0.105"
oxc_transformer = "0.105"
oxc_codegen = "0.105"
oxc_span = "0.105"
oxc_ast = "0.105"
oxc_semantic = "0.105"

# Module resolution (independent versioning)
oxc_resolver = "11.16"

# CLI and utilities
clap = { version = "4", features = ["derive"] }
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
colored = "2"

# Async runtime for fetch and other async APIs
tokio = { version = "1", features = ["full"] }

# Crypto support
uuid = { version = "1", features = ["v4"] }
rand = "0.9"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"
# Additional crypto for full Node.js compatibility
aes = "0.8"
cbc = "0.1"
ctr = "0.9"
cfb-mode = "0.8"
ofb = "0.6"
ecb = "0.1"
cipher = "0.4"
rsa = "0.9"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
p256 = { version = "0.13", features = ["ecdsa", "ecdh"] }
p384 = { version = "0.13", features = ["ecdsa", "ecdh"] }
ecdsa = "0.16"
elliptic-curve = "0.13"
hkdf = "0.12"
scrypt = "0.11"
signature = "2"
digest = "0.10"
subtle = "2"
des = "0.8"
blowfish = "0.9"

# Base64 encoding for Buffer module
base64 = "0.22"

# Compression support for zlib module (using zlib-rs backend for maximum performance)
flate2 = { version = "1.0", features = ["zlib-rs"], default-features = false }

# IDNA/Punycode support for URL module
idna = "1.0"

# Lazy static for global state
lazy_static = "1.4"

# TTY detection - platform specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_WindowsProgramming",
    "Win32_System_Registry",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
] }

# WebSocket support (using tokio-tungstenite - reliable with TLS support)
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"

# Lock-free synchronization for ultra-fast WebSocket
parking_lot = "0.12"

# HTTP server (Hyper for ultra-fast single-threaded server)
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }
bytes = { version = "1", optional = true }

# Also keep Axum for the CLI serve command
axum = { version = "0.7", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
num_cpus = { version = "1.16", optional = true }

# Rolldown bundler (Rust-based, Rollup-compatible)
# Note: Rolldown is in early development, may have API changes
rolldown = { git = "https://github.com/rolldown/rolldown", package = "rolldown", tag = "v1.0.0-beta.57", optional = true }

# Package manager (Orogene - fast npm-compatible package manager)
node-maintainer = { version = "0.3", optional = true }
nassun = { version = "0.3", optional = true }
oro-common = { version = "0.3", optional = true }
oro-package-spec = { version = "0.3", optional = true }
async-std = { version = "1.12", optional = true }
indicatif = { version = "0.17", optional = true }
url = { version = "2", optional = true }

[features]
default = ["server", "pm"]
server = ["hyper", "hyper-util", "http-body-util", "bytes", "axum", "serde", "serde_json", "num_cpus"]
pm = ["node-maintainer", "nassun", "oro-common", "oro-package-spec", "async-std", "indicatif", "url", "serde", "serde_json"]
